Added title and favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <link>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>sandbox</title>
+    <title>Landing page</title>
+    <link rel="icon" type="image/x-icon" href="https://scontent.fsla4-1.fna.fbcdn.net/v/t39.30808-6/301617846_471101898364126_1201507817028337834_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=y30gCQEJcjkAX8Lz8w8&_nc_ht=scontent.fsla4-1.fna&oh=00_AfCw4jz3CVpXU5Y7c-PcYnRSs_aovfJakfky-OILHfx0Pg&oe=6362D410" />
   </head>
   <body>
     <div class="hero-content-wrappper mb-5 mb-md-0">
